# autoresearch-rivals

./: .gitignore  README.md  agent.py  claims.py  consensus.md  ingest.py  program_α.md  program_β.md  provenance.json  pyproject.toml  retrieve.py  rivalry.py  synthesis.py  topic.md  train.py
rounds/round_000/: diff.json  α_critique.md  α_output.md  α_revision.md  β_critique.md  β_output.md  β_revision.md
rounds/round_001/: diff.json  α_critique.md  α_output.md  α_revision.md  β_critique.md  β_output.md  β_revision.md
rounds/round_002/: diff.json  α_critique.md  α_output.md  α_revision.md  β_critique.md  β_output.md  β_revision.md
rounds/round_003/: diff.json  α_critique.md  α_output.md  α_revision.md  β_critique.md  β_output.md  β_revision.md
rounds/round_004/: diff.json  α_critique.md  α_output.md  α_revision.md  β_critique.md  β_output.md  β_revision.md
rounds/round_005/: diff.json  α_critique.md  α_output.md  β_critique.md  β_output.md
workspace_α/: draft.md  notes.md
workspace_β/: draft.md  notes.md
